# nonebot-plugin-nsfw

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_nsfw/: __init__.py  config.py  deps.py  loader.py  vendor_nsfw_model.py
